--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
         <header class="head1">Todo App</header>
         <div class="inputField">
             <input type="text" placeholder="Add your new todo" class="input">
-            <button><i class="fas fa-plus"> <img src="aa.png" alt="aa" height="2px" width="2px"></i></button>
+            <button><i class="fas fa-plus"></i></button>
         </div>
         <ul class="todolist">
+            <li>Buy a computer<span><i class="fas fa-trash"></i></span></li>
+            <li>Buy a Laptop<span><i class="fas fa-trash"></i></span></li>
+            <li>Buy a Mobile<span><i class="fas fa-trash"></i></span></li>
+
+
 
 
         </ul>
         <div class="footer">
-            <span>You have <span class="pendingNumb"></span> pending task</span>
+            <span>You have 3<span class="pendingNumb"></span> pending task</span>
             <button>clear all</button>
         </div>
     </div>
