--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <li>Buy a computer<span><i class="fas fa-trash"></i></span></li>
             <li>Buy a Laptop<span><i class="fas fa-trash"></i></span></li>
             <li>Buy a Mobile<span><i class="fas fa-trash"></i></span></li>
+            <li>Buy a Mobile<span><i class="fas fa-trash"></i></span></li>
+            <li>Buy a Mobile<span><i class="fas fa-trash"></i></span></li>
+
+
 
 
 
